# linkedin-scraper

./: .editorconfig  CLAUDE.md  README.md  plan.md  pyproject.toml  todo.md
docs/: PRD.md  PRD_v2.md
src/linkedin_scraper/: __init__.py  cli.py  config.py  errors.py
src/linkedin_scraper/auth/: __init__.py  cookie_manager.py
src/linkedin_scraper/database/: __init__.py  service.py  stats.py
src/linkedin_scraper/display/: __init__.py  errors.py  status.py  tables.py
src/linkedin_scraper/export/: __init__.py  csv_exporter.py
src/linkedin_scraper/linkedin/: __init__.py  client.py  exceptions.py  mapper.py
src/linkedin_scraper/models/: __init__.py  connection.py  rate_limit.py
src/linkedin_scraper/rate_limit/: __init__.py  display.py  exceptions.py  service.py
src/linkedin_scraper/search/: __init__.py  filters.py  orchestrator.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_cookie_manager.py  test_csv_exporter.py  test_database.py  test_database_stats.py  test_display.py  test_errors.py  test_integration.py  test_linkedin_client.py  test_mapper.py  test_orchestrator.py  test_rate_limit_display.py  test_rate_limiter.py
tests/unit/: test_models.py
