[project]
name = "linkedin-scraper"
version = "0.1.0"
description = "CLI tool to search LinkedIn connections using cookies"
readme = "README.md"
authors = [
    { email = "samiur.rahman@betterup.co" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "keyring>=25.7.0",
    "linkedin-api>=2.3.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
    "sqlmodel>=0.0.31",
    "typer>=0.21.1",
]

[project.scripts]
linkedin-scraper = "linkedin_scraper.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=linkedin_scraper --cov-report=term-missing"
